--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,10 @@ enum34==1.1.6
 futures==3.0.5
 grpcio==1.0.0
 grpcio-tools==1.0.0
+influxdb==3.0.0
 protobuf==3.0.0
+psutil==4.3.1
+python-dateutil==2.5.3
+pytz==2016.7
+requests==2.11.1
 six==1.10.0
